# llm_eval_evalscope

./: .gitignore  LICENSE  README_HTML.md  README_TUI.md  eval_deepseek_r1.py  eval_deepseek_r1_safety_prompts.py  eval_deepseek_r1_special.py  eval_deepseek_r1_special_safety_prompts.py  eval_deepseek_r1_stable.py  eval_deepseek_r1_stable_safety_prompts.py  eval_doubao_seed_1_6.py  eval_doubao_seed_1_6_safety_prompts.py  eval_qwen3_max.py  eval_qwen3_max_safety_prompts.py  eval_qwen_plus.py  eval_qwen_plus_safety_prompts.py  generate_html_viewer.py  generate_html_viewer_v2.py  integrate_general_qa.py  main.py  pyproject.toml  test.py
.claude/: settings.local.json
data_process/: README_charts.md  README_merge.md  chartjs_wrap.py  chinese_simpleqa_chart.html  chinese_simpleqa_merged.json  chinese_simpleqa_merged_pretty.json  evaluation_report.html  evaluation_report.md  example_chart.html  extract_swebench_metrics.py  extract_swebench_rates.py  general_qa_merged.json  general_qa_merged_pretty.json  generate_charts.py  generate_html_report.py  generate_markdown_report.py  generate_swebench_comprehensive_chart.py  generate_swebench_grouped_charts.py  generate_swebench_metrics_charts.py  generate_swebench_rates_chart.py  ifeval_merged.json  ifeval_merged_pretty.json  main.py  math_500_merged.json  math_500_merged_pretty.json  merge_chinese_simpleqa.py  merge_evaluation_data.py  merge_specific_datasets.py  merge_swebench.py  merged_evaluation_data_pretty.json  multi_if_merged.json  multi_if_merged_pretty.json  run_visualization_pipeline.py  swebench_comprehensive_chart.json  (+7 more)
(+391 files in other folders)
